--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,15 +1,22 @@
 {% if DISQUS_SITENAME %}
 <div id="comments">
     <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      var disqus_shortname = '{{ DISQUS_SITENAME }}';
-      (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">Comments powered by <span class="logo-disqus">Disqus</span></a>
+<script>
+
+var disqus_config = function () {
+this.page.url = {{ SITEURL }}/{{ article.url }}; 
+this.page.identifier = {{ article.slug }}; 
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//khuevu-techblog.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
 {% endif %}
