--- a/templates/comments.html
+++ b/templates/comments.html
@@ -4,8 +4,8 @@
 <script>
 
 var disqus_config = function () {
-this.page.url = {{ SITEURL }}/{{ article.url }}; 
-this.page.identifier = {{ article.slug }}; 
+this.page.url = "{{ SITEURL }}/{{ article.url }}"; 
+this.page.identifier = "{{ article.slug }}"; 
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
