--- a/templates/comments.html
+++ b/templates/comments.html
@@ -4,14 +4,14 @@
 <script>
 
 var disqus_config = function () {
-this.page.url = "{{ SITEURL }}/{{ article.url }}"; 
-this.page.identifier = "{{ article.slug }}"; 
+this.page.url = '{{ SITEURL }}/{{ article.url }}'; 
+this.page.identifier = '{{ article.slug }}'; 
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 
-s.src = '//khuevu-techblog.disqus.com/embed.js';
+s.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
 
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
