--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <section id="content">
 {% block content_title %}
-<h2>All articles</h2>
+<h2>All writings</h2>
 {% endblock %}
 
 {% for article in articles_page.object_list %}
